--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,30 +1,29 @@
 object Form1: TForm1
-  Left = 321
-  Height = 926
-  Top = 168
-  Width = 1839
+  Left = 314
+  Height = 835
+  Top = 121
+  Width = 1248
   Caption = 'Form1'
-  ClientHeight = 926
-  ClientWidth = 1839
+  ClientHeight = 835
+  ClientWidth = 1248
   DesignTimePPI = 120
   OnCreate = FormCreate
   LCLVersion = '2.0.2.0'
-  object CastleControl1: TCastleControl
-    Cursor = crHelp
+  object Castle2DControl1: TCastle2DControl
     Left = 8
-    Height = 912
+    Height = 816
     Top = 8
-    Width = 752
+    Width = 1080
     Options = []
     TabOrder = 0
-  end
-  object Castle2DControl1: TCastle2DControl
-    Left = 608
-    Height = 484
-    Top = 8
-    Width = 296
-    Options = []
-    TabOrder = 1
     AutoRedisplay = False
+  end
+  object Button1: TButton
+    Left = 1120
+    Height = 31
+    Top = 40
+    Width = 94
+    Caption = 'Button1'
+    TabOrder = 1
   end
 end
